--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,9 +9,8 @@
     <color name="purple">#ba53de</color>
     <color name="pink">#f469a9</color>
     <color name="blue">#88bef5</color>
-
-
-
+    <color name="lightWhite">#EEEBEB</color>
+    <color name="yellow">#FDEA3D</color>
 
 
 </resources>
